Found a bug with the section2 and 3
The section2-slider-gradient has position: absolute so it misbehaved and overlapped section3 and the buttons were unable to press. I removed the top property from the .section2-slider-gradient, and now it's in place.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -358,7 +358,7 @@ header::after {
 .section2 {
   min-height: calc(1000 * var(--desktopProportions));
   max-width: 100%;
-position: relative;
+  position: relative;
   padding-top: calc(150 * var(--desktopProportions));
   animation: normal slideFromLeft 1s ease;
 }
@@ -378,9 +378,8 @@ position: relative;
 
 .section2-slider-gradient {
   left: 0;
-  top: -50%;
   bottom: 50%;
-  height: 200%;
+  height: 100%;
 }
 
 .section2-slider-gradient {
